# SOCguard

./: Installation  LICENSE  README.md  install.sh  pyproject.toml
Usage/: Auto mode (tries WinRM:5986, else SSH:22)  SSH (if OpenSSH is enabled on Windows)  TLS with self-signed cert (Linux trust)  WinRM (default on port 5986)
Windows/: Collect-WindowsLogs.ps1
Windows prep/: SSH on Windows (alternative)  WinRM over HTTPS (recommended)
packaging/: make_deb.sh
packaging/debian/: control  socguard.install
src/socguard/: cli.py  core.py  utils.py
src/socguard/connectors/: ssh_conn.py  winrm_conn.py
